<resources>

    <string name="title_news">Новости</string>

    <!-- NewsFragment -->
    <string name="empty_news_list">По заданным категориям новостей нет</string>
    <string name="events_not_found">События по заданному критерию не найдены</string>

    <!-- FilterFragment -->
    <string name="filter_change_apply">Изменения приняты</string>
    <string name="title_filter">Фильтр</string>
    <string name="title_item_filter_money">Деньгами</string>
    <string name="category_help">Категории помощи:</string>

    <!-- NewsDetailFragment -->
    <string name="hyperlink_news_owner_mail"><u>Напишите нам</u></string>
    <string name="hyperlink_news_owner_web"><u>Перейти на сайт организации</u></string>
    <string name="help_things">Помочь\nвещами</string>
    <string name="help_volunteer">Стать\nволонтером</string>
    <string name="help_prof">Проф.\nпомощь</string>
    <string name="help_money">Помочь\nденьгами</string>
    <string name="questions_news">У вас есть вопросы?</string>
    <string name="temp_count_102">+102</string>
    <string name="title_help_dialog_fragment">Спасибо за решение помочь!</string>
    <string name="send_money">Перевести</string>
    <string name="cancel">Отмена</string>
    <string name="title_money_help_dialog_fragment">Выберите размер пожертвования</string>
    <string name="title_custom_money">или введите нужную сумму</string>
    <string name="input_custom_money">Введите сумму</string>

</resources>