<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_fragment_help_money"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="26dp">

    <TextView
        style="@style/TextStylePopupHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/title_help_dialog_fragment" />

    <TextView
        style="@style/TextStylePopupFieldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_money_help_dialog_fragment" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/default_money_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/money_sum_100"
            style="@style/toggleButtonChangeMoneySum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="100 ₽" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/money_sum_500"
            style="@style/toggleButtonChangeMoneySum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="500 ₽" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/money_sum_1000"
            style="@style/toggleButtonChangeMoneySum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1000 ₽" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/money_sum_2000"
            style="@style/toggleButtonChangeMoneySum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2000 ₽" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        style="@style/TextStylePopupFieldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_custom_money" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxBackgroundColor="@color/white"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/money_sum_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="9"
            android:hint="@string/input_custom_money"
            android:inputType="number"
            android:textColorHint="@color/black_38" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="17dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_cancel"
            style="@style/TextStyle17_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default_large"
            android:enabled="true"
            android:text="@string/cancel"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/button_send"
            style="@style/TextStyle17_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/send_money"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>